customtests/tests/expected/assignvars2.err
tests/assignvars2.scala:11: error: mutability mismatch:
 found   : AnyRef @readonly(assignvars2.this.r1)
 required: AnyRef(assignvars2.this.u1)
	u1 = r1  // should error
             ^
tests/assignvars2.scala:14: error: mutability mismatch:
 found   : AnyRef @readonly(assignvars2.this.r1)
 required: AnyRef @mutable(assignvars2.this.m1)
	m1 = r1  // should error
             ^
two errors found
